--- a/package.json
+++ b/package.json
@@ -9,9 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "@web3-onboard/core": "^2.9.0",
+    "@web3-onboard/injected-wallets": "^2.2.4",
+    "@web3-onboard/react": "^2.3.6",
+    "@web3-onboard/walletconnect": "^2.1.3",
+    "@web3auth/base": "^3.0.0",
+    "@web3auth/modal": "^3.0.2",
+    "antd": "^4.23.6",
+    "ethers": "^5.7.2",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "18.11.2",
