--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-rewards": "^2.0.4",
     "swr": "^1.3.0"
   },
   "devDependencies": {
